www/static/css/image-edit.css
form .image {
    display: flex;
    max-width: 100%;
    width: auto;
    height: 100px;
    margin-bottom: 20px;
    justify-self: center;
    border: 1px solid var(--color-accent);
    border-radius: 4px;
}

.btn-image-edit {
    padding-right: 2em;
}

/* Stile per il toggle button */
.toggle-button-label {
    display: flex;
    align-items: center;
    cursor: pointer;
    gap: 0.5rem;
    position: relative;
    margin-bottom: 1em;
    left: 0;
}

.toggle-button-checkbox {
    display: none;
}

.toggle-button-slider {
    position: relative;
    width: 50px;
    height: 25px;
    background-color: #ccc;
    border-radius: 25px;
    transition: background-color 0.3s;
}

.toggle-button-slider::before {
    content: '';
    position: absolute;
    width: 20px;
    height: 20px;
    background-color: white;
    border-radius: 50%;
    top: 50%;
    left: 5px;
    transform: translateY(-50%);
    transition: transform 0.3s;
}

.toggle-button-checkbox:checked + .toggle-button-slider {
    background-color: #4CAF50;
}

.toggle-button-checkbox:checked + .toggle-button-slider::before {
    transform: translateY(-50%) translateX(25px);
}

